--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <img src="./assets/images/movierank.png/" height="200" alt="sreenshot of movie project" />
 
      <h3><a href="./public/birthday-invite.html">Birthday invite Project</a></h3>
-     <img src="./assets/images/birthday.png/" height="200" alt="sreensshot birthday project" />
+     <img src="./assets/images/birthday.png/" height="200" alt="sreenshot birthday project" />
      <hr />
 
      <a href="./public/about.html">About Me</a>
